<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tiendaderopa10.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tiendaderopa10.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">

        <!-- Acción que navega hacia fragment_detalles -->
        <action
            android:id="@+id/action_navGallery_to_fragmentDetalles"
            app:destination="@id/fragment_detalles" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tiendaderopa10.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fragment_detalles"
        android:name="com.example.tiendaderopa10.fragment_detalles"
        android:label="fragment_detalles"
        tools:layout="@layout/fragment_detalles" />
</navigation>